# agent-stream-kit

./: Cargo.toml
agent-stream-kit/: Cargo.toml
agent-stream-kit/src/: agent.rs  askit.rs  board_agent.rs  config.rs  context.rs  definition.rs  error.rs  flow.rs  id.rs  lib.rs  llm.rs  mcp.rs  message.rs  output.rs  registry.rs  spec.rs  stream.rs  test_utils.rs  tool.rs  value.rs
agent-stream-kit/tests/: askit_test.rs  board_test.rs  counter_test.rs  flow_test.rs  main_test.rs  stream_test.rs  var_disabled_test.rs  var_test.rs
agent-stream-kit/tests/common/: agents.rs  mod.rs
agent-stream-kit/tests/streams/: Core_Board1.json  Core_Board2.json  Core_Var.json  Core_Var_disabled.json
agent-stream-kit/tests/suites/: askit_test.rs  board_test.rs  counter_test.rs  stream_test.rs  var_disabled_test.rs  var_test.rs
askit-macros/: Cargo.toml
askit-macros/src/: lib.rs
askit-macros/tests/: configs.rs  default_kind.rs  default_name.rs  displays.rs  main_test.rs  string_literal_names.rs
askit-macros/tests/suites/: configs.rs  default_kind.rs  default_name.rs
examples/: board.rs
src/: agent.rs  askit.rs  board_agent.rs  config.rs  context.rs  data.rs  definition.rs  lib.rs  message.rs  output.rs  value.rs
tests/: counter_test.rs  flow_test.rs
tests/common/: mod.rs
