[workspace]
members = ["agent-stream-kit", "askit-macros"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.16.0"
description = "Agent Stream Kit"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
askit-macros = { version = "0.16.0", path = "askit-macros" }
