[package]
name = "agent-stream-kit"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
askit-macros = { workspace = true }
async-trait = "0.1"
fnv = "1"
indexmap = { version = "2", features = ["serde"] }
inventory = "0.3"
log = "0.4"
photon-rs = { version = "0.3.3", optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
default = ["image"]
image = ["photon-rs"]
test-utils = []

[[test]]
name = "counter_test"
path = "tests/counter_test.rs"

[[test]]
name = "flow_test"
path = "tests/flow_test.rs"
