[package]
name = "agent-stream-kit"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
askit-macros = { workspace = true }
async-trait = "0.1"
fnv = "1"
im = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
inventory = "0.3"
log = "0.4"
photon-rs = { version = "0.3.3", optional = true }
regex = "1.12.2"
rmcp = { version = "0.12.0", features = ["client", "transport-child-process"], optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
serial_test = "3"

[features]
default = ["image", "mcp"]
image = ["photon-rs"]
mcp = ["rmcp"]
test-utils = []

[[test]]
name = "main_test"
path = "tests/main_test.rs"
required-features = ["test-utils"]
