[package]
name = "askit-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macro helpers for agent-stream-kit"

[lib]
proc-macro = true

[dependencies]
im = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
agent-stream-kit = { path = "../agent-stream-kit" }
